--- a/lib/heads_up_web/live/effort_live.html.heex
+++ b/lib/heads_up_web/live/effort_live.html.heex
@@ -1,6 +1,9 @@
 <div class="effort">
   <h1>Community Love</h1>
   <section>
+    <button phx-click="add" phx-value-quantity="3">
+      + 3
+    </button>
     <div>
       <%= @responders %>
     </div>
